# CADFD

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/injection/: intel_fault05.yaml  intel_fault10.yaml  intel_fault15.yaml  intel_fault20.yaml
config/model/: autoformer.yaml  cesta.yaml  cnn1d.yaml  gru.yaml  informer.yaml  lstm.yaml  modern_tcn.yaml  patchtst.yaml  stgcn.yaml  transformer.yaml
docs/: EXPERIMENT.md  PROPOSAL.md
docs/CESTA/: EXPERIMENT.md
firmware/: Cargo.toml  README.md  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/src/: config.rs  dht.rs  main.rs  mqtt.rs  wifi.rs
notebooks/: data_analysis.ipynb  injected_analysis.ipynb
src/CADFD/: __init__.py  batch.py  logging.py  seed.py  utils.py
src/CADFD/cli/: __init__.py  evaluate.py  inject.py  optimize.py  prepare.py  train.py
src/CADFD/datasets/: __init__.py
src/CADFD/evaluation/: __init__.py  communication.py  evaluator.py  metrics.py
src/CADFD/injection/: __init__.py  faults.py  injector.py  markov.py  registry.py
src/CADFD/models/: __init__.py  base.py  registry.py
src/CADFD/optimization/: __init__.py  optimizer.py  search_spaces.py
src/CADFD/schema/: __init__.py  config.py  fault.py  manifest.py  types.py  window.py
src/CADFD/training/: __init__.py  callbacks.py  graph_batch.py  oversampling.py  trainer.py
src/CESTA/: __init__.py  logging.py  seed.py  utils.py
src/CESTA/cli/: __init__.py  evaluate.py  inject.py  optimize.py  prepare.py  report.py  train.py
src/CESTA/datasets/: __init__.py
src/CESTA/evaluation/: __init__.py  communication.py  (+1 more)
(+92 files in other folders)
