[package]
name = "cafd-firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
esp-idf-svc = { version = "0.50", features = ["binstart"] }
esp-idf-hal = "0.44"
embedded-svc = "0.28"
dht-sensor = "0.2"
embedded-hal = "1.0"
mqtt-protocol = "0.11"
log = "0.4"
esp-idf-sys = { version = "0.35", features = ["binstart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
embuild = "0.32"

[profile.release]
opt-level = "s"
lto = true

[profile.dev]
debug = true
opt-level = "z"
