[package]
name = "cesta-firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
esp-idf-svc = { version = "0.50", features = ["binstart"] }
esp-idf-hal = "0.45"
embedded-svc = "0.28"
dht-sensor = "0.2"
embedded-hal = "1.0"
mqtt-protocol = "0.11"
log = "0.4"
esp-idf-sys = { version = "0.36", features = ["binstart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "=1.0.145"

[build-dependencies]
embuild = { version = "0.32", features = ["espidf"] }

[profile.release]
opt-level = "s"
lto = true

[profile.dev]
debug = true
opt-level = "z"
